--- a/style.css
+++ b/style.css
@@ -1,17 +1,65 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: Arial, Helvetica, sans-serif
 }
-
-.bullet-point{
-list-style-type: none;
+h1{
+    font-size: 48px;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 40px;
+    font-weight: 400;
 }
+.flex-container{
+    width: 700px;
+    margin: 0 auto;
+    border: solid black 1px;
+    display: flex;
+    flex-direction: row;
+}
+.flex-container img, div{
+    flex: 1 1 0%;
+}
+#category{
+    margin: 20px 0 10px 20px;
+    padding: 5px;
+    font-size: 10px;
+    font-weight: 100;
+    background-color: red;
+    display: inline-block;
+   
+}
+div{
+    flex: 2 1 0%;
+}
+div h2{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 48px;
+    margin: 0 20px 20px 20px;
+}
+p{
+    margin-left: 20px;
+    font-size: 14px;
+    font-weight: bold;
 
+}
+button{
+    padding: 8px;
+    margin: 20px;
+    background-color: orange;
+    border: none;
+    border-radius: 5%;
+}
 a {
-font-size: 18px;
-color: black;
+font-size: 14px;
+color: white;
+text-decoration: none;
 }
 
-
-a:hover{
-color: rgb(255, 166, 0);
+button:hover{
+background-color: rgb(178, 117, 4);
+/* transition from color to color */
 }
