--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ h1{
     margin: 40px;
     font-weight: 400;
 }
+main{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 .flex-container{
     width: 700px;
     margin: 0 auto;
@@ -23,14 +28,14 @@ h1{
 .flex-container img, div{
     flex: 1 1 0%;
 }
-#category{
-    margin: 20px 0 10px 20px;
+#Tag{
+    margin: 35px 0 10px 20px;
+    margin-left: 396px;
     padding: 5px;
     font-size: 10px;
     font-weight: 100;
-    background-color: red;
+    background-color: rgb(254, 62, 62);
     display: inline-block;
-   
 }
 div{
     flex: 2 1 0%;
@@ -44,7 +49,6 @@ p{
     margin-left: 20px;
     font-size: 14px;
     font-weight: bold;
-
 }
 button{
     padding: 8px;
@@ -54,12 +58,11 @@ button{
     border-radius: 5%;
 }
 a {
-font-size: 14px;
-color: white;
-text-decoration: none;
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
 }
-
 button:hover{
-background-color: rgb(178, 117, 4);
-/* transition from color to color */
+    background-color: rgb(178, 117, 4);
+    /* transition from color to color */
 }
